--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
       "php": "^7.4|^8.0",
-      "illuminate/contracts": "^8.0"
+      "illuminate/contracts": "^8.0",
+      "illuminate/support": "^8.0"
     },
     "autoload": {
       "psr-4": {
