--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         }
     ],
     "require": {
-      "php": "^7.4|^8.0",
-      "illuminate/contracts": "^8.0",
-      "illuminate/support": "^8.0"
+        "php": "^7.4|^8.0",
+        "illuminate/contracts": "^8.0",
+        "illuminate/support": "^8.0",
+        "orchestra/testbench": "^6.18"
     },
     "autoload": {
       "psr-4": {
